added ideas for surveys and structure

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,23 @@
 <html>
 <head>
+
 </head>
+<title> Women in Tech </title>
+
 
 
 <body>
-<p> "HEY SAILOR" </p>
+
+<div> <p> "IdeaS for surveys: adding a survey to see how tech driven our website visitors are" </p>
+<ul>
+  <li> "Pop quiz with a survey monkey link"</li>
+  <li> "Quiz embeded in the page using ruby?"</li>
+  <li> "Contact us button" </li>
+</ul>
+ </div>
+
+
+
 </body>
 
 </html>
